delete food successfully done
