# swagger/swagger.yml
@@ -77,6 +77,13 @@ paths:
           description: update a food
           schema:
             $ref: "#/definitions/food"
+    delete:
+      tags:
+        - foods
+      operationId: deleteFood
+      responses:
+        204:
+          description: delete a food
 
 produces:
   - application/json
